--- a/src/views/CommonComponent/CollapsiableSection.less
+++ b/src/views/CommonComponent/CollapsiableSection.less
@@ -5,7 +5,7 @@
   }
   .card-collapse {
     overflow: hidden;
-    transition: height 0.3s ease-out;
+    transition: max-height 0.3s ease-out;
   }
   // .card-body {
   //   border: none !important; // why do we need this? (doesn't seem to change anything)
