add new feature to preview the descriptors in btt node of behaviour tree view

--- a/src/views/BehaviourTree/BtAssetEditorNode.less
+++ b/src/views/BehaviourTree/BtAssetEditorNode.less
@@ -2,31 +2,31 @@
   border: 1px solid #333;
   padding: 10px;
   background: white;
-  width: 200px;
+  width: auto;
   text-align: center;
 }
 
 
 .selector-node{
   border: 1px solid #333;
-  padding: 10px;
+  padding: 15px;
   background: white;
-  width: 200px;
+  width: auto;
   text-align: center;
 }
 
 .sequence-node {
   border: 1px solid #333;
-  padding: 10px;
+  padding: 15px;
   background: white;
-  width: 200px;
+  width: auto;
   text-align: center;
 }
 
 .task-node {
   border: 1px solid #333;
-  padding: 10px;
+  padding: 15px;
   background: white;
-  width: 200px;
+  width: auto;
   text-align: center;
 }
