--- a/src/views/BehaviourTree/BtAssetEditorNode.css
+++ b/src/views/BehaviourTree/BtAssetEditorNode.css
@@ -2,28 +2,28 @@
   border: 1px solid #333;
   padding: 10px;
   background: white;
-  width: 200px;
+  width: auto;
   text-align: center;
 }
 .selector-node {
   border: 1px solid #333;
-  padding: 10px;
+  padding: 15px;
   background: white;
-  width: 200px;
+  width: auto;
   text-align: center;
 }
 .sequence-node {
   border: 1px solid #333;
-  padding: 10px;
+  padding: 15px;
   background: white;
-  width: 200px;
+  width: auto;
   text-align: center;
 }
 .task-node {
   border: 1px solid #333;
-  padding: 10px;
+  padding: 15px;
   background: white;
-  width: 200px;
+  width: auto;
   text-align: center;
 }
 /*# sourceMappingURL=BtAssetEditorNode.css.map */
